edition = "2023";

package correctable;

option go_package = "github.com/relab/gorums/tests/correctable";

option features.field_presence = IMPLICIT;

import "gorums.proto";

service CorrectableTest {
    rpc Correctable(CorrectableRequest) returns (CorrectableResponse) {
        option (gorums.quorumcall) = true;
    }
    rpc CorrectableStream(CorrectableRequest) returns (stream CorrectableResponse) {
        option (gorums.quorumcall) = true;
    }
}

message CorrectableRequest {}

message CorrectableResponse {
    int32 Level = 1;
}
